# Binance-Account-Ranking-Algorithm

./: Details.txt  README.md  requirements.txt
Assignment/: Makefile  README.md  mkdocs.yml  pyproject.toml
Assignment/.github/actions/python-poetry-env/: action.yml
Assignment/.github/workflows/: ci.yml  docs.yml
Assignment/notebooks/: README.md
Assignment/notebooks/1-data/: data_analysis.ipynb  portfolio_metrics.csv
Assignment/notebooks/4-feat_eng/: EDA_2.ipynb  Feature_Engineering.ipynb  Profit.csv  fe.ipynb  test2.ipynb
Assignment/notebooks/5-models/: FINAL_METRICS.csv  top_20_ensemble.csv  top_20_topsis.csv  top_20_zscore.csv
