[tool.poetry]
name = "PrimeTrade"
version = "0.1.0"
description = "Analyze the dataset to calculate financial metrics for each account, rank them, and provide a top 20 list."
authors = [
    "Abhash Goyal <abhashgoyal200@gmail.com>",
]
readme = "README.md"
documentation = "https://abhashgoyal.github.io/Assignment"
repository = "https://github.com/abhashgoyal/Assignment"

package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
hydra-core = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"

# Standardized Developer Workflow Orchestration
cruft = {extras = ["pyproject"], version = "^2.15.0"} # Automated Cookiecutter template synchronization

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.12.0"

#
[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.7"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
pymdown-extensions = "^10.7"
#

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.virtualenvs]
in-project = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.run]
source = ["src"]
omit = ["**/__init__.py"]
